# kitinerary

./: .clang-tidy  .codespellrc.license  .flatpak-manifest.json  .gitattributes  .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  CMakePresets.json  KItineraryConfig.cmake.in  KPimItineraryConfig.cmake.in  README.md  REUSE.toml  add_license.sh  flatpak-kmime-version.patch  metainfo.yaml  org_kde_kitinerary.categories
.reuse/: dep5
autotests/: CMakeLists.txt  addressparsertest.cpp  airportdbtest.cpp  airportnametokenizertest.cpp  barcodedecodertest.cpp  bcbpparsertest.cpp  berdecodertest.cpp  berencodertest.cpp  bitarraytest.cpp  buggy.js  calendarhandlertest.cpp  datatypestest.cpp  documentutiltest.cpp  eraelbtickettest.cpp  extractordocumentnodetest.cpp  extractorfiltertest.cpp  extractorinputtest.cpp  extractorrepositorytest.cpp  extractorresulttest.cpp  extractorscriptenginetest.cpp  extractorscriptenginetest.qrc  extractortest.cpp  extractorutiltest.cpp  extractorvalidatortest.cpp  filetest.cpp  htmldocumenttest.cpp  jsapitest.cpp  jsonlddocumenttest.cpp  knowledgedbtest.cpp  locationutiltest.cpp  mergeutiltest.cpp  nameoptimizertest.cpp  pdfdocumenttest.cpp  pkpassextractortest.cpp  plistreadertest.cpp  postprocessortest.cpp  preprocessortest.cpp  pricefindertest.cpp  priceutiltest.cpp  protobufstreamreadertest.cpp  (+14 more)
autotests/barcodes/: README
autotests/bcbpdata/: easyjet.json  easyjet.txt  iata-resolution792-example1.json  iata-resolution792-example1.txt  iata-resolution792-example2.json  iata-resolution792-example2.txt  iata-resolution792-example3.json  iata-resolution792-example3.txt  iata-resolution792-example4.json  iata-resolution792-example4.txt  iata-resolution792-example5.json  iata-resolution792-example5.txt  issue-date.json  issue-date.txt  minimal.json  minimal.txt  minimal2.json  minimal2.txt  missing-eticket-indicator.json  missing-eticket-indicator.txt  qatar-zero-size-conditional-section.json  qatar-zero-size-conditional-section.txt  rail.json  rail.txt  tap-missing-issue-date.json  tap-missing-issue-date.txt
autotests/calendarhandlerdata/: canceled.ics  canceled.json  event-full-day.ics  event-full-day.json  event.ics  event.json  eventreservation.ics  eventreservation.json  flight.ics  flight.json  hotel.ics  hotel.json  rentalcar.ics  rentalcar.json  to-be-cancelled.ics  train.ics  train.json
autotests/jsonlddata/: event-string-address.in.json  event-string-address.out.json  flight-cancellation.in.json  flight-cancellation.out.json  graph.in.json  graph.out.json  multi-type.in.json  multi-type.out.json  place-coordinate-propagation.in.json  place-coordinate-propagation.out.json  reservationFor-array.in.json  reservationFor-array.out.json  reservationFor-array2.in.json  reservationFor-array2.out.json
autotests/mergedata/: airline.lhs.json  airline.merged.json  airline.rhs.json  bus-no-number.lhs.json  bus-no-number.merged.json  bus-no-number.rhs.json  cancellation.lhs.json  cancellation.merged.json  cancellation.rhs.json  datetime.lhs.json  datetime.rhs.json  iata-bcbp.lhs.json  iata-bcbp.merged.json  iata-bcbp.rhs.json  mtime.lhs.json  mtime.merged.json  mtime.rhs.json  person.merged.json  person.rhs.json  restaurant-subtype.lhs.json  restaurant-subtype.rhs.json  subject-of.lhs.json  subject-of.merged.json  subject-of.rhs.json  tickettoken.merged.json  tickettoken.rhs.json  train-nrt-res.lhs.json  train-nrt-res.merged.json  train-nrt-res.rhs.json  train-unbound.lhs.json  train-unbound.merged.json  train-unbound.rhs.json
autotests/misc/: test.html
autotests/pkpassdata/: README  airbaltic.json  airbaltic.pkpass  airberlin.json  airberlin.pkpass  apple-semantic-event-ticket-scrubbed.json  apple-semantic-event-ticket-scrubbed.pkpass  apple-store-UA-sample-unsigned-scrubbed.json  apple-store-UA-sample-unsigned-scrubbed.pkpass  cleartrip.pkpass  eurowings.json  eurowings.pkpass  lufthansa-with-timezone.json  lufthansa-with-timezone.pkpass  lufthansa.json  lufthansa.pkpass  lufthansa.pkpasses  pkpass-util.sh  swiss.json  swiss.pkpass
autotests/plist/: apple-structured-data-train.json  apple-structured-data-train.plist
autotests/postprocessordata/: af-iata-code-train-station.post.json  af-iata-code-train-station.pre.json  ambiguous-airports-2x2.post.json  ambiguous-airports-2x2.pre.json  ambiguous-iata-code-large-distance.post.json  ambiguous-iata-code-large-distance.pre.json  ambiguous-iata-code-small-distance.post.json  ambiguous-iata-code-small-distance.pre.json  bcbp-expansion.post.json  bcbp-expansion.pre.json  bcbp-two-leg-expansion.post.json  bcbp-two-leg-expansion.pre.json  day-rollover.post.json  day-rollover.pre.json  (+21 more)
semantic/: CMakeLists.txt  calendarhandler.cpp  calendarhandler.h  config-semantic.h.cmake  datatypes.cpp  datatypes.h  extractor.cpp  extractor.h  extractorcontext.cpp  extractorcontext.h  extractorengine.cpp  extractorengine.h  extractorfilter.cpp  extractorfilter.h  extractorpostprocessor.cpp  extractorpostprocessor.h  extractorpreprocessor.cpp  extractorpreprocessor.h  extractorrepository.cpp  extractorrepository.h  extractorrule.cpp  extractorrule.h  jsonlddocument.cpp  jsonlddocument.h  semanticmemento.cpp  semanticmemento.h  structureddataextractor.cpp  structureddataextractor.h
src/: CMakeLists.txt  Messages.sh  barcodedecoder.cpp  barcodedecoder.h  barcodedecoder_p.h  calendarhandler.cpp  calendarhandler.h  config-kitinerary.h.cmake  documentutil.cpp  documentutil.h  extractor.cpp  extractor.h  extractorcapabilities.cpp  extractorcapabilities.h  extractorengine.cpp  extractorengine.h  extractorfilter.cpp  extractorfilter.h  extractorinput.cpp  extractorinput.h  extractorpostprocessor.cpp  extractorpostprocessor.h  extractorpostprocessor_p.h  extractorpreprocessor.cpp  extractorpreprocessor.h  extractorrepository.cpp  extractorrepository.h  extractorutil.cpp  extractorutil.h  extractorvalidator.cpp  extractorvalidator.h  extractorvalidator_p.h  file.cpp  file.h  flightpostprocessor.cpp  flightpostprocessor_p.h  genericpdfextractor.cpp  genericpdfextractor.h  genericpdfextractor_p.h  genericpkpassextractor.cpp  (+35 more)
(+1653 files in other folders)
